- addition 500 server error fix - css dropdown not showing when logged in fixed - little bit of change on the backend settings page

--- a/Codebrainbv/PostcodeCheckout/view/frontend/web/css/postcode-checkout.css
+++ b/Codebrainbv/PostcodeCheckout/view/frontend/web/css/postcode-checkout.css
@@ -11,3 +11,7 @@
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 }
+
+.postcodenl-autocomplete-menu {
+	z-index: 1000 !important;
+}
